# awslogs

./: .coveralls.yml  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  COPYING  Dockerfile  MANIFEST.in  README.rst  TESTING.md  TESTING.rst  coverage.sh  docker-compose.yml  pytest.ini  requirements-py26.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests.py  tox.ini
.devcontainer/: devcontainer.json  settings.json
.github/workflows/: test.yml
awslogs/: __init__.py  __main__.py  _version.py  bin.py  core.py  exceptions.py  utils.py
tests/: test_it.py  test_parse_time.py  test_versions.py  test_watch.py  timeplan.yaml
