[metadata]
name = awslogs
# version = '0.2.0'
author = Jorge Bastida
author-email = me@jorgebastida.com
summary = awslogs is a simple command line tool to read aws cloudwatch logs.
description-file = README.rst
home-page = http://github.com/jorgebastida/awslogs
license = BSD
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Utilities
keywords =
    aws
    logs
    cloudwatch
[files]
packages =
    awslogs
[entry_points]
console_scripts =
    awslogs = awslogs.bin:main
